--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -15,4 +15,4 @@ $red: rgb(255, 0, 0);
 $dark-silver: rgb(79, 79, 79);
 $black-shadow: rgba(0, 0, 0, 0.6);
 $ashes: rgb(66, 68, 78);
-$black: rgb(0, 0, 0);
+$black: #151617;
